--- a/index.html
+++ b/index.html
@@ -13,55 +13,6 @@
     crossorigin="anonymous"
     referrerpolicy="no-referrer"
   ></script>
-  <script>
-    window.html2canvas = html2canvas;
-    window.jsPDF = window.jspdf.jsPDF;
-
-    function makePDF() {
-
-        var element = document.querySelector("#tables");
-        html2pdf().set({
-            margin: [10, 10], // Set top and bottom margins to 20mm
-        }).from(element).save();
-        // doc.setFont('Arial', 'normal', 11); // set font family, style, and size
-        //
-        // doc.html(element, {
-        //     callback: function (doc) {
-        //         doc.save("html2pdf.pdf");
-        //     },
-        //     margin: [10, 10, 10, 10],
-        //     x: 0,
-        //     y: 0,
-        // });
-
-        // html2canvas(document.querySelector("#tables"), {
-        //     allowTaint: true,
-        //     useCORS: true,
-        //     scale: 1,
-        // }).then(canvas => {
-        //
-        //     var img = canvas.toDataURL("image/png");
-        //     var imgWidth, imgHeight;
-        //     img.onload = function() {
-        //         var ratio = img.width / img.height;
-        //         if (ratio > 1) {
-        //             imgWidth = 100; // Set a default width
-        //             imgHeight = imgWidth / ratio;
-        //         } else {
-        //             imgHeight = 100; // Set a default height
-        //             imgWidth = imgHeight * ratio;
-        //         }
-        //         // Now add the image to the jsPDF document
-        //
-        //     };
-        //     var doc = new jsPDF();
-        //     doc.setFont('Arial');
-        //     doc.getFontSize(11);
-        //     doc.addImage(img, 'PNG', 10, 10, imgWidth, imgHeight);
-        //     doc.save('html2pdf');
-        // });
-    }
-  </script>
 
   <style>
     #tables {
@@ -248,6 +199,7 @@
           }
       }
 
+
       const tableDiv = document.getElementById('tables');
       docPayload.data.mealPlan.map((mealP, i) => {
           let tableHTML = `
@@ -293,11 +245,60 @@
                 </tr>
               `).join('')}
             </table>
-    `;
+          `;
 
           tableDiv.innerHTML += tableHTML;
-      })
+      });
 
+
+      window.html2canvas = html2canvas;
+      window.jsPDF = window.jspdf.jsPDF;
+
+      function makePDF() {
+
+          // var element = document.querySelector("#tables");
+          // console.log(element)
+          // html2pdf().set({
+          //     margin: [10, 10], // Set top and bottom margins to 20mm
+          // }).from(element).save();
+          // doc.setFont('Arial', 'normal', 11); // set font family, style, and size
+          //
+          // doc.html(element, {
+          //     callback: function (doc) {
+          //         doc.save("html2pdf.pdf");
+          //     },
+          //     margin: [10, 10, 10, 10],
+          //     x: 0,
+          //     y: 0,
+          // });
+
+          html2canvas(document.querySelector("#tables"), {
+              allowTaint: true,
+              useCORS: true,
+              scale: 1,
+          }).then(canvas => {
+
+              var img = canvas.toDataURL("image/png");
+              var imgWidth, imgHeight;
+              img.onload = function() {
+                  var ratio = img.width / img.height;
+                  if (ratio > 1) {
+                      imgWidth = 100; // Set a default width
+                      imgHeight = imgWidth / ratio;
+                  } else {
+                      imgHeight = 100; // Set a default height
+                      imgWidth = imgHeight * ratio;
+                  }
+                  // Now add the image to the jsPDF document
+
+              };
+              var doc = new jsPDF();
+              doc.setFont('Arial');
+              doc.getFontSize(11);
+              doc.addImage(img, 'PNG', 10, 10, imgWidth, imgHeight);
+              doc.save('html2pdf');
+          });
+      }
 
   </script>
 </body>
